[package]
name = "junior-coders-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
config = { version = "0.13.4", features = ["yaml"] }
google-sheets4 = "5.0.3"
regex = "1.10.2"
reqwest = { version = "0.11.22"}
scraper = "0.18.1"
serde = "1.0.194"
serde_json = "1.0.108"
simple-error = "0.3.0"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
